--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link rel="stylesheet" href="styles/main.css">
 
-        <!-- build:js scripts/vendor/modernizr.js -->
+        <!-- build:js({.tmp}) scripts/vendor/modernizr.js -->
         <script src="bower_components/modernizr/modernizr.js"></script>
         <!-- endbuild -->
     </head>
