adding the yeoman build files to gh-pages [ci skip]

--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
         <meta name="viewport" content="initial-scale=1,user-scalable=no,width=device-width">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/0e10308a.main.css">
 
-        <!-- build:js({.tmp}) scripts/vendor/modernizr.js -->
-        <script src="bower_components/modernizr/modernizr.js"></script>
-        <!-- endbuild -->
+        <script src="scripts/vendor/d41d8cd9.modernizr.js"></script>
     </head>
     <body>
         <!--[if lt IE 10]>
@@ -40,8 +38,6 @@
         </script>
         -->
 
-        <!-- build:replace <script src="scripts/app.min.js"></script> -->
-        <script data-main="scripts/config" src="bower_components/requirejs/require.js"></script>
-        <!-- endbuild -->
+        <script src="scripts/6f888039.app.min.js"></script>
 </body>
 </html>
