--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,8 @@
         <title>intergalacticfantastic</title>
         <meta name="description" content="">
 
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="viewport" content="initial-scale=1,user-scalable=no,width=device-width">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
