adding the yeoman build files to gh-pages [ci skip]

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
         <title>intergalacticfantastic</title>
         <meta name="description" content="">
 
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="viewport" content="initial-scale=1,user-scalable=no,width=device-width">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link rel="stylesheet" href="styles/30c2cb12.main.css">
 
-        <script src="scripts/vendor/f6f4e872.modernizr.js"></script>
+        <script src="scripts/vendor/5a224cf5.modernizr.js"></script>
     </head>
     <body>
         <!--[if lt IE 10]>
@@ -38,6 +40,6 @@
         </script>
         -->
 
-        <script src="scripts/ca4d1992.app.min.js"></script>
+        <script src="scripts/2e6d018f.app.min.js"></script>
 </body>
 </html>
