Add a loading indicator. Kill the FoUC.

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,8 @@
         <![endif]-->
 
         <main id="js-main" role="main" class="container">
-            <canvas id="js-canvas"></canvas>
+            <h1 id="js-loader" class="inner">Loading&hellip;</h1>
+            <canvas id="js-canvas" class="inner hidden-completely"></canvas>
         </main>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
