adding the yeoman build files to gh-pages [ci skip]

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <meta name="viewport" content="initial-scale=1,user-scalable=no,width=device-width">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="styles/28725242.main.css">
+        <link rel="stylesheet" href="styles/c82539d9.main.css">
 
-        <script src="scripts/vendor/05d10906.modernizr.js"></script>
+        <script src="scripts/vendor/5a224cf5.modernizr.js"></script>
     </head>
     <body>
         <!--[if lt IE 10]>
@@ -25,7 +25,8 @@
         <![endif]-->
 
         <main id="js-main" role="main" class="container">
-            <canvas id="js-canvas"></canvas>
+            <h1 id="js-loader" class="inner">Loading&hellip;</h1>
+            <canvas id="js-canvas" class="inner hidden-completely"></canvas>
         </main>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
@@ -40,6 +41,6 @@
         </script>
         -->
 
-        <script src="scripts/a1f733e0.app.min.js"></script>
+        <script src="scripts/04c294bb.app.min.js"></script>
 </body>
 </html>
