--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" manifest="manifest.appcache"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" manifest="manifest.appcache"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" manifest="manifest.appcache"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" manifest="manifest.appcache"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -17,7 +17,7 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link rel="stylesheet" href="styles/c82539d9.main.css">
 
-        <script src="scripts/vendor/e56865db.modernizr.js"></script>
+        <script src="scripts/vendor/f6f4e872.modernizr.js"></script>
     </head>
     <body>
         <!--[if lt IE 10]>
